[package]
name = "advent2019"
version = "0.1.0"
authors = ["Joe Shaw <joe@joeshaw.org>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day1"

[[bin]]
name = "day2"

[[bin]]
name = "day3"

[[bin]]
name = "day4"

[[bin]]
name = "day5"
